# cs2bgame

./: .gitignore  README.md
CMake/: CMakeLists.txt
Dependencies/SFML/Libraries/: libsfml-audio.so.2.2.0  libsfml-graphics.so.2.2.0  libsfml-network.so.2.2.0  libsfml-system.so.2.2.0  libsfml-window.so.2.2.0  sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
Planing/: Diagramm1.dia  System Requirements.txt  class scheme.dia  class scheme.dia.autosave
Resources/Data/: Creatures  Instructions.xcf  Thumbs.db
Scripts/: LinuxMake.sh  MacXCode.sh
Source/: Application.cpp  Application.hpp  AudioManager.cpp  AudioManager.hpp  Creature.hpp  DynamicEntity.cpp  DynamicEntity.hpp  EnemyEntity.cpp  EnemyEntity.hpp  EnemyEntityTemplate.cpp  EnemyEntityTemplate.hpp  EnemyEntityTemplateManager.cpp  EnemyEntityTemplateManager.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Interface.cpp  Interface.hpp  Main.cpp  Map.cpp  Map.hpp  MapArea.cpp  MapArea.hpp  MapChunk.cpp  MapChunk.hpp  Player.cpp  Player.hpp  ResourceManager.hpp  ResourceManager.inl  StaticEntity.cpp  StaticEntity.hpp
